# rag

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
embedding/: mrt.py
langserve/: README.md
langserveapp/: docker-compose.yml  pyproject.toml
langserveapp/app/: server.py
langserveapp/app/chains/: mrt.py
rag/: embedding.py
