[tool.poetry]
name = "langserveapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = ">=2.7.4,<3.0.0"
httpx = "^0.27.2,<=0.27.2"
langchain-community = "^0.3.19"
langchain-openai = "^0.3.7"
qdrant-client = "^1.13.2"
pypdf = "^5.3.1"
dotenv = "^0.9.9"
langchain-qdrant = "^0.2.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
